Update ddos.java